feat:add redeem and fix bug
