# controller/http_controller.go
@@ -68,6 +68,9 @@ func Run() {
 		v1.POST("/id-coins/mint/commit", auth.AuthSignMiddleware(), IdCoinsMintCommit)
 		v1.POST("/id-coins/invalid/refund/pre", auth.AuthSignMiddleware(), RefundIdCoinsInvalidLpPre)
 		v1.POST("/id-coins/invalid/refund/commit", auth.AuthSignMiddleware(), RefundIdCoinsInvalidLpCommit)
+		v1.POST("/id-coins/redeem/preview", auth.AuthSignMiddleware(), BookOrderTakeMintBidPreview)
+		v1.POST("/id-coins/redeem/pre", auth.AuthSignMiddleware(), BookOrderTakeMintBidPre)
+		v1.POST("/id-coins/redeem/commit", auth.AuthSignMiddleware(), BookOrderTakeMintBidCommit)
 		//v1.GET("/id-coins/inscribe/orders", auth.AuthSignMiddleware(), FetchIdCoinsOpOrders)
 		v1.GET("/id-coins/inscribe/orders", FetchIdCoinsOpOrders)
 		v1.GET("/id-coins/address/mint/order", auth.AuthSignMiddleware(), FetchIdCoinsAddressMintOrder)
